initial set-up, working from JSON server, some basic php set-up

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sgt-react",
+  "name": "eat_well",
   "version": "1.0.0",
-  "description": "The Student Grade Table: Written in React",
+  "description": "Food Health Rating App: Written in React",
   "main": "server/index.js",
   "scripts": {
     "client": "webpack-dev-server",
@@ -51,15 +51,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Learning-Fuze/sgt-react.git"
+    "url": "git+https://github.com/redbearin/eat_well.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Learning-Fuze/sgt-react/issues"
+    "url": "https://github.com/redbearin/eat_well/issues"
   },
-  "homepage": "https://github.com/Learning-Fuze/sgt-react#readme",
+  "homepage": "https://github.com/redbearin/eat_well#readme",
   "eslintIgnore": [
     "server/public/main.js"
   ],
